gitops/apps/fireflyiii/sts.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: fireflyiii
  labels:
    app: fireflyiii
    part-of: fireflyiii
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fireflyiii
      part-of: fireflyiii
  serviceName: 'fireflyiii' # Service name for network identity
  template:
    metadata:
      labels:
        app: fireflyiii
        part-of: fireflyiii
    spec:
      containers:
        - name: fireflyiii
          image: fireflyiii/core:version-6.1.21
          ports:
            - name: fireflyiii
              containerPort: 8080
          volumeMounts:
            - name: upload
              mountPath: /var/www/html/storage/upload
          resources:
            limits:
              memory: 200Mi
            requests:
              memory: 150Mi
      volumes:
        - name: upload
          persistentVolumeClaim:
            claimName: upload
  volumeClaimTemplates:
    - metadata:
        name: upload
      spec:
        accessModes: ['ReadWriteOnce']
        resources:
          requests:
            storage: 10Gi
