gitops/apps/fireflyiii/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fireflyiii
spec:
  parentRefs:
    - name: public
      namespace: projectcontour
      sectionName: https
  hostnames:
    - firefly.didactiklabs.io
  rules:
    - backendRefs:
        - name: ak-outpost-proxy01
          port: 80
